html/css/style.css
:root {
    --bv-main-bg-color: #f8f9ec;
    --bv-small-highlight: rgb(156, 156, 156);
    --bv-darker-lightgray: rgb(212, 212, 212);
    --bv-big-highlight-rgb: 0, 116, 82;
    /*#007452*/
    --bv-big-highlight: rgb(var(--bv-big-highlight-rgb));
    /*--bv-contrast:  hsl(162, 100%, 23%);*/
    /*--bv-contrast:  #FAFF01;*/
    --bv-contrast:  #eff15ef6;
}

*, :after, :before {
    box-sizing: border-box;
}

:root * {
    font-family: 'IBM Plex Sans', sans-serif !important;
}

body #page {
    background-color: var(--bv-main-bg-color);
}

body #page div{
    background-color: var(--bv-main-bg-color);
}

span {
    display: inline;
}

a {
    color: var(--bv-big-highlight);
}

/*left align any content text per default*/
div.container h1,
div.container h2,
div.container h3,
div.container h4,
div.container h5,
div.edition_container p,
div.edition_container h1,
div.edition_container h2,
div.edition_container h3,
div.edition_container h4,
div.edition_container h5 {
    text-align: left !important;
}

div.container p {
    text-align: justify;
    hyphens: auto;
}

button#media-menu-toggler {
    border: none;
    box-shadow:none;
    padding: 0;
}

button#media-menu-toggler:hover {
    border: none;
    box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width) var(--bv-main-bg-color);
}

.navbar {
    background-color: var(--bv-big-highlight);
    max-height: 100vh;
}

.navbar.navbar-expand-lg {
    padding: 0.5rem;
}

.navbar-nav, .nav-item, a.nav-link {
    color: var(--bv-main-bg-color);
}

#page nav.navbar div {
    background-color: var(--bv-big-highlight);
}

#navbarSupportedContent a.nav-link {
    font-size: 1.7rem;
    font-weight: 900;
}

.navbar-nav ul li a {
    background-color: var(--bv-big-highlight);
    color: var(--bv-main-bg-color);
    font-size: 1.3rem;
    font-weight: bold;
}

.navbar-nav ul li a:hover, 
.navbar-nav ul li a:active {
    background-color: var(--bv-big-highlight);
    color: var(--bv-contrast);
}

.nav-link:focus, .nav-link:hover {
	color: var(--bv-contrast);
}

div#navbarSupportedContent div#navbar_right_spacer {
    min-width: 10%;
    max-width: 30rem;
}

.dropdown-toggle::after {
	display: none;
	margin-left: .255em;
	vertical-align: .255em;
	content: "";
	border-top: .3em solid;
	border-right: .3em solid transparent;
	border-bottom: 0;
	border-left: .3em solid transparent;
}

.btn-primary {
	--bs-btn-color: #fff;
	--bs-btn-bg: var(--bv-big-highlight);
	--bs-btn-border-color: var(--bv-big-highlight);
	--bs-btn-hover-color: #fff;
	--bs-btn-hover-bg: var(--bv-big-highlight);
	--bs-btn-hover-border-color: var(--bv-big-highlight);
	--bs-btn-focus-shadow-rgb: 49,132,253;
	--bs-btn-active-color: #fff;
	--bs-btn-active-bg: var(--bv-big-highlight);
	--bs-btn-active-border-color: var(--bv-big-highlight);
	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
	--bs-btn-disabled-color: #fff;
	--bs-btn-disabled-bg: var(--bv-big-highlight);
	--bs-btn-disabled-border-color: var(--bv-big-highlight);
    color: white;
    fill: white;
}


li.mb-1 > button {
    font-weight: bolder;
}


#left_edition_content_nav li {
    padding-left: 1rem;
}

#left_edition_content_nav li li{
    padding-left: 1.5rem;
}

#left_edition_content_nav li li li {
    padding-left: 2rem;
}

cite {
    font-style: normal;
}

#wrapper-hero-content {
    padding: 0;
}

.intro {
    background-color: #fff;
}


div#docinfo {
    font-weight: 600;
    margin-bottom: 0.35rem;
}

div#docinfo h1{
    max-width: 40rem;
    padding-top: 1rem;
    font-size: 2.5rem;
    font-weight: 800;
}

div#docinfo p.document_info {
    max-width: 40rem;
    font-size: 1.5rem;
    margin: 0.3rem;
}

/*rules for anchor hack */
:target + h2,
:target + h3,
:target + h4
{
    background-color: lightgray;
}

:target::before {
    content: "";
    display: block;
    height: 80px; /* fixed navbar height*/
    margin: -80px 0 0; /* negative navbar height */
  }

.intro .col-md-6 {
    padding: 0;
    align-items: center;
    vertical-align: middle;
    display: flex;
}

.landing_container {
    display: flex;
    align-items: center;
    vertical-align: middle;
    padding-bottom: 2rem;
}

.landing_text {
    display: block;
    margin: auto;
    max-width: 45em;
}   

/*.landing_text object {*/
.landing_text embed {
    max-width:100%;
    max-height:100%;
    width: 350vh;
}

.landing_text h1, h5 {
    padding: .5em 0;
}

.landing_text a {
    display: inline-block;
    /*padding: .5em .5em .5em 0;*/
}

.landing_text p {
    hyphens: auto;
}

body {
    border-top-width: 0;
    min-height: 100vh;
    display: flex;
    overflow-x: hidden;
}

h2,h3,h4 {
    width: fit-content;
    font-weight: bold;
    font-size: medium;
    margin-bottom: .75rem;
    margin-top: 1.75rem;
}

h2.section, h3.section {
    margin-top: 2rem;
    font-size: large;
}

p {
    display: block;
    padding: 0;
    width: fit-content;
}


div.image_rights{
    padding-top: 1rem;
    padding-bottom: 1rem;
    height: fit-content;
    font-size: small;
    max-width: 40rem;
}

div.image_rights div {
    padding-top: 1rem;
    padding-bottom: 1rem;
    height: fit-content;
    font-size: x-small;
    padding-right: 0;
}

div button.osd_nav_element {
    width: fit-content;
    color: var(--bv-main-bg-color);
    background-color: var(--bv-big-highlight);
    box-shadow: none;
    border: 0;
    padding: 0;
    margin: 0;
    font-size: 3rem;
    font-weight: 800;
    height: 3rem;
    vertical-align: middle;
    text-align: center;
    line-height: 3rem;
    margin-left: 0.5rem;
    border-radius: 3px;
    width: 3rem;
}

div button#osd_zoom_reset_button.osd_nav_element {
    display: flex;
    align-items: center;
}

div button#osd_zoom_reset_button.osd_nav_element svg{
    margin: 0 auto;
    display: block;
}

div.image_rights p{
    margin: auto;
    max-width: 70em;
    hyphens: auto;
    text-align: justify;
    display: inline-block;
}

a {
    text-decoration: none !important;
}

.site>* {
    width: 100%;
}
/* ... */

